# snoop

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: rust.yaml
src/: cache.rs  cli.rs  config.rs  error.rs  main.rs
tests/: config.rs
