[package]
name = "snoop"
version = "0.1.0"
edition = "2021"
authors = ["Eric Minassian <eric@ericminassian.com>"]
repository = "https://github.com/eric-minassian/snoop"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = "deny"
nursery = "deny"

uninlined_format_args = { level = "allow", priority = 1 }

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
